# music-finder-pipeline

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_embeddings.py  0003_mb_raw.py  0004_fetch_cache.py  0005_cascade.py  0006_analysis.py  0007_wave2.py  0008_search_bind.py  0009_tag_calibration.py  0010_worker_heartbeat.py  0011_artist_tags.py  0012_mb_refresh.py  0013_refresh_serial.py  0014_fingerprint_structure.py  0015_wave3_heavy.py  0016_bc_candidate.py  0017_mb_submission.py  0018_mb_tag_submission.py  0019_publish_watermark_bans.py  0020_slop_evaluation.py  0021_mb_target_ledgers.py  0022_mb_submission_approved.py  0023_artist_analysis_vector.py  0024_audio_clip_archive.py  0025_tag_centering.py  0026_tag_audio_blocklist.py  0027_mb_submission_duplicate.py  0028_tag_manual_blocklist.py  0029_tag_review.py  0030_artist_republish_requested.py  0031_platform_identity_artist_id_idx.py  0032_tag_alias.py
docs/: HANDOFF.md  RUNBOOK.md  SETUP.md  WORKFLOWS.md  tag-quality-baseline.json
docs/adr/: 0018-musicbrainz-refresh.md
scripts/: apply_tag_aliases.py  apply_tag_verdicts.py  backup-analysis-stores.sh  backup.sh  bootstrap.sh  factory-doctor.sh  maintenance-window.sh  ops.sh  reindex-vectors.sh  sweep_junk_tags.py
seeds/: benchmark-artists.txt
src/pipeline/: __init__.py  activities.py  adjudicate.py  ai_probe.py  analysis.py  backfill_analysis.py  bind.py  binding_audit.py  block_tag.py  cascade.py  classify_tags.py  coherence.py  config.py  corroborate.py  dataset_audit.py  deezer_bandcamp.py  deezer_bandcamp_calibrate.py  deezer_embeds.py  device.py  discovery.py  embed_job.py  factory_status.py  fetch_cache.py  fingerprint.py  harvest_bc_tags.py  heads.py  mb_artist_create.py  mb_bootstrap.py  mb_refresh.py  mb_submit.py  mb_sync.py  publish.py  queues.py  review_poller.py  search_bind.py  seed_ingest.py  slop_detect.py  staging.py  tag_calibration.py  tag_quality_baseline.py  (+7 more)
src/pipeline/bench/: __init__.py  __main__.py  clips.py  fetch_clips.py  harness.py  metrics.py  mock.py  types.py
src/pipeline/embedders/: __init__.py  base.py  clap.py  mert.py  muq.py  musicfm.py  registry.py
src/pipeline/embedders/_vendor/musicfm/: VENDOR.md
src/pipeline/embedders/_vendor/musicfm/model/: musicfm_25hz.py
src/pipeline/sources/: __init__.py  bandcamp.py  common.py  deezer.py  soundcloud.py  youtube.py
tests/: conftest.py  test_adjudicate.py  test_analysis.py  test_analysis_vectors.py  test_backup.py  test_bandcamp.py  test_bandcamp_tags.py  test_bench_clips.py  test_bench_harness.py  test_bench_metrics.py  test_bind.py  test_block_tag.py  test_cascade.py  test_classify_tags.py  test_clip_archive.py  test_coherence.py  test_config.py  test_corroborate.py  test_deezer.py  test_deezer_bandcamp.py  test_deezer_embeds.py  test_device.py  test_discovery.py  test_embed_job.py  test_embed_windowed.py  test_embedders_base.py  test_embedders_smoke.py  test_factory_doctor.py  test_factory_status.py  test_fetch_cache.py  test_fetch_clips.py  test_fingerprint_wave3.py  test_harvest_bc_tags.py  test_ingest_e2e.py  test_mb_artist_create.py  test_mb_bootstrap.py  test_mb_refresh.py  test_mb_submit.py  test_mb_sync.py  test_publish.py  (+15 more)
tests/fixtures/: bandcamp_album.html  bandcamp_music.html  deezer_top.json  soundcloud_resolve.json  soundcloud_tracks.json
