[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-finder-pipeline"
version = "0.1.0"
description = "Audio-first corpus pipeline (ADR-015): MB-bootstrapped, source-correct CLAP embeddings."
requires-python = ">=3.12,<3.13"
dependencies = [
    "temporalio>=1.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# Audio models — transformers-based embedders (CLAP, MERT) + audio I/O. Installed
# on the box and on the Mac (CPU/MPS) to develop/verify the embedders.
models = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "torchvision>=0.17",
    "soundfile>=0.12",
    "transformers>=4.40",
    "nnaudio>=0.3.4",
    "einops>=0.7",  # vendored MusicFM (_vendor/musicfm) needs it
    # Wave-1 analysis heads (ADR-015): MIR + loudness + fingerprint.
    # librosa is explicit (was transitive via muq — the torchvision lesson).
    "librosa>=0.10",
    "pyacoustid>=1.3",  # needs system libchromaprint (present on box + in apt)
    "pyloudnorm>=0.1",
    "yt-dlp>=2026.1",  # YT flat discovery (Unlicense); extraction stays design-gated
]
# MuQ / MuQ-MuLan — separate, heavier package; box-primarily.
muq = [
    "muq>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
# Vendored third-party model code (kept verbatim from upstream; see its VENDOR.md).
extend-exclude = ["src/pipeline/embedders/_vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# Common tasks (the "npm scripts" of this repo). Run: `uv run poe <task>`.
[tool.poe.tasks]
test = "pytest -q"
lint = "ruff check ."
fix = "ruff check --fix ."
fmt = "ruff format ."
db-up = "docker compose up -d db"
db-down = "docker compose down"
migrate = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
migrate-new = "alembic revision -m"   # usage: uv run poe migrate-new "add embedding tables"
migrate-status = "alembic current"
worker = "python -m pipeline.worker"
temporal = "temporal server start-dev"
bench = "python -m pipeline.bench"
fetch-clips = "python -m pipeline.bench.fetch_clips --file seeds/benchmark-artists.txt --out clips"
mb-bootstrap = "python -m pipeline.mb_bootstrap"   # usage: uv run poe mb-bootstrap --dir ~/g/db-backups/mbdump-extract/mbdump
analysis-backfill = "python -m pipeline.backfill_analysis"   # Wave-1 heads over already-embedded tracks
search-bind = "python -m pipeline.search_bind"   # 3d B-tier binding over unbound artists
review-poll = "python -m pipeline.review_poller"   # apply admin-approved Tier-C bindings
factory-status = "python -m pipeline.factory_status"   # live activity snapshot (--watch for loop)
tag-calibrate = "python -m pipeline.tag_calibration"   # refresh per-tag z-score moments
publish = "python -m pipeline.publish"   # factory → serving DB (needs APP_DATABASE_URL)
wave-seed = "python -m pipeline.wave_seeder"   # bounded-window mass seeding
check.sequence = ["lint", "test"]
setup.sequence = ["db-up", "migrate"]   # post-`uv sync` convenience (full: ./scripts/bootstrap.sh)

# Deterministic torch: CUDA wheels on the box (Linux), default CPU/MPS on the Mac.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
